Pseudo-class & Box Model

--- a/CSS/claseModeloCaja/index.html
+++ b/CSS/claseModeloCaja/index.html
@@ -9,9 +9,9 @@
 <body>
     <main>
         <section>
-            <h1>Soy un titulo</h1>
+            <h1>Modelo de Caja</h1>
             <div>
-                <p>Soy un parrafo</p>
+                <p>Practicando estilos de modelo de cajas</p>
             </div>
         </section>
     </main>
