--- a/CSS/classSpecificity/index.html
+++ b/CSS/classSpecificity/index.html
@@ -8,9 +8,9 @@
   </head>
   <body>
     <header class="page-header">
-      <h1 id="page-title" class="title">Empresa</h1>
+      <h1 class="title">Empresa</h1>
       <nav>
-        <ul id="main-nav" class="nav">
+        <ul class="nav">
           <li><a href="">Home</a></li>
           <li><a href="">Cursos</a></li>
           <li><a href="">Instructores</a></li>
@@ -43,8 +43,13 @@
         </ul>
       </section>
 
-      <section class="style-orders"></section>
-      <p class="order-title"><strong>Orden de los estilos</strong> (de arriba a abajo)</p>
+      <section class="style-orders">
+      <p class="order-title"><strong>Orden de las fuentes</strong> (de arriba a abajo)</p>
+      <ul class="style-orders__item">
+        <li>Cómo llamamos a los diferentes archivos de CSS</li>
+        <li>En qué línea del código colocamos el estilo</li>
+      </ul>
+      </section>
     </main>
   </body>
 </html>
