Layout Challenge html & default css

--- a/CSS/classDisplay/index.html
+++ b/CSS/classDisplay/index.html
@@ -20,7 +20,11 @@
         hueco, seguirá añadiendo más contenido seguido. Se pueden aplicar
         margin/padding solo en iz-der. No se pueden aplicar width ni height.
       </li>
-      <li><strong>Inline-Block:</strong> Permite aplicar margin, padding, width, y height. Permite que otros elementos se posiciones en línea horizontalmente si hay espacio suficiente.</li>
+      <li>
+        <strong>Inline-Block:</strong> Permite aplicar margin, padding, width, y
+        height. Permite que otros elementos se posiciones en línea
+        horizontalmente si hay espacio suficiente.
+      </li>
     </ul>
 
     <div class="block-element">Esta es una etiqueta div</div>
@@ -33,7 +37,9 @@
     <span>Soy una etiqueta span en <strong>Display: inline</strong></span>
     <span>Soy una etiqueta span en <strong>Display: inline</strong></span>
 
-    <p>Esto es una barra de navegador con <strong>Display: Inline-Block</strong></p>
+    <p>
+      Esto es una barra de navegador con <strong>Display: Inline-Block</strong>
+    </p>
     <ul class="nav">
       <li>Home</li>
       <li>Cursos</li>
