--- a/CSS/layoutChallenge/index.html
+++ b/CSS/layoutChallenge/index.html
@@ -10,74 +10,78 @@
     <header class="header">
       <img class="logo" src="./images/logo.png" alt="Logo" />
       <nav>
-        <ul >
+        <ul class="nav-list">
           <li>Home</li>
-          <li>Cursos</li>
-          <li>Profesores</li>
+          <li>Interviews</li>
+          <li>Bands</li>
           <li>Blog</li>
         </ul>
       </nav>
     </header>
-
-    <main>
-      <section>
-        <p>
-          Durante décadas, el black metal ha sido un territorio hostil, cerrado
-          y dominado por una sola narrativa. Women Out Loud nace para romper ese
-          silencio impuesto y amplificar las voces de las mujeres que han
-          desafiado los límites del género, dentro y fuera del escenario.
-        </p>
-
-        <p>
-          Este espacio celebra a las artistas que transformaron la oscuridad en
-          expresión, la rabia en identidad y el ruido en discurso. Músicas,
-          vocalistas, instrumentistas, productoras y creadoras que han reclamado
-          su lugar en una escena que durante mucho tiempo les negó visibilidad.
-        </p>
-
-        <p>
-          Aquí no hablamos de excepciones, sino de presencia. De proyectos que
-          redefinen el black metal desde perspectivas diversas, personales y
-          radicalmente honestas. Raising Voices no es solo un lema: es un acto
-          de resistencia, de memoria y de futuro.
-        </p>
-      </section>
-    </main>
-    <aside>
-      <article class="interview">
-        <p>
-          The connection that I have with the natural world and my continued
-          pursuit therein is something deeply personal, and Hulder serves only
-          as a small glimpse. It is an inescapable truth that melody speaks to
-          the core of most people and can, at times, create a sense of
-          remembrance for that which you have not experienced in this realm.
-        </p>
-        <img src="./images/hulder.jpg" alt="Hulder" />
-      </article>
-      <article class="interview">
-        <p>“Music is the universal language of mankind.”</p>
-        <img src="./images/makhashanah.jpg" alt="Emily Armstrong" />
-      </article>
-      <article class="interview">
-        <p>
-          "I feel that black metal is a really feminine genre." Meet Witch Club
-          Satan, the Necrobutcher-approved feminist trio pushing the boundaries
-          of metal's most extreme subgenre
-        </p>
-        <img src="./images/witch_club_satan.webp" alt="Witch Club Satan" />
-      </article>
-      <article class="interview">
-        <p>
-          Fuelled by humanistic thinking and pure, feminine power, Bianca's
-          debut album is more proof that black metal has progressed far beyond
-          Satanism and petulant rebellion
-        </p>
-        <img src="./images/bianca.webp" alt="Bianca" />
-      </article>
-    </aside>
+    <div class="main-aside_container">
+      <main class="main-text">
+        <section>
+          <p>
+            Durante décadas, el black metal ha sido un territorio hostil,
+            cerrado y dominado por una sola narrativa. Women Out Loud nace para
+            romper ese silencio impuesto y amplificar las voces de las mujeres
+            que han desafiado los límites del género, dentro y fuera del
+            escenario.
+          </p>
+          <br />
+          <p>
+            Este espacio celebra a las artistas que transformaron la oscuridad
+            en expresión, la rabia en identidad y el ruido en discurso. Músicas,
+            vocalistas, instrumentistas, productoras y creadoras que han
+            reclamado su lugar en una escena que durante mucho tiempo les negó
+            visibilidad.
+          </p>
+          <br />
+          <p>
+            Aquí no hablamos de excepciones, sino de presencia. De proyectos que
+            redefinen el black metal desde perspectivas diversas, personales y
+            radicalmente honestas. Raising Voices no es solo un lema: es un acto
+            de resistencia, de memoria y de futuro.
+          </p>
+          <br />
+        </section>
+      </main>
+      <aside>
+        <article class="interview">
+          <p>
+            The connection that I have with the natural world and my continued
+            pursuit therein is something deeply personal, and Hulder serves only
+            as a small glimpse. It is an inescapable truth that melody speaks to
+            the core of most people and can, at times, create a sense of
+            remembrance for that which you have not experienced in this realm.
+          </p>
+          <img src="./images/hulder.jpg" alt="Hulder" />
+        </article>
+        <article class="interview">
+          <p>“Music is the universal language of mankind.”</p>
+          <img src="./images/makhashanah.jpg" alt="Emily Armstrong" />
+        </article>
+        <article class="interview">
+          <p>
+            "I feel that black metal is a really feminine genre." Meet Witch
+            Club Satan, the Necrobutcher-approved feminist trio pushing the
+            boundaries of metal's most extreme subgenre
+          </p>
+          <img src="./images/witch_club_satan.webp" alt="Witch Club Satan" />
+        </article>
+        <article class="interview">
+          <p>
+            Fuelled by humanistic thinking and pure, feminine power, Bianca's
+            debut album is more proof that black metal has progressed far beyond
+            Satanism and petulant rebellion
+          </p>
+          <img src="./images/bianca.webp" alt="Bianca" />
+        </article>
+      </aside>
+    </div>
     <footer>
       <span>&copy; WomenOutLoud 2026</span>
-      <ul>
+      <ul class="rrss-list">
         <li>Contact</li>
         <li>About Us</li>
         <li>Instagram</li>
